--- a/main/static/css/index.css
+++ b/main/static/css/index.css
@@ -610,6 +610,15 @@ video.preview {
             background: rgba(0, 0, 0, 0.5);
             z-index: 999;
         }
+        #overlay2 {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            z-index: 999;
+        }
 
         /* Popup container */
         .popup {
