--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -16,14 +16,17 @@
         </div>
         </div>
         <div class="navbar-right">
-            <div class="nav-icon" title="Info"><i data-lucide="info"></i></div>
+            <div class="nav-icon" title="Info" onclick="toggleInfoPopup()"><i data-lucide="info"></i></div>
             <div class="nav-icon" title="Settings" onclick="toggleSettingsPopup()"><i data-lucide="settings"></i></div>
     </nav>
     
     
     <main class="main-content">
         <section class="hero-section">
-            <h1 class="tagline">Effortless Automate Basketball Highlight Editing!</h1>
+            <div class="spacer">
+                <h1 class="tagline">HoopCut</h1>
+                <h1 class="tagline">AI Automated Basketball Highlights</h1>
+            </div>
             
             <div class="carousel-container">
                 <div class="carousel">
@@ -61,6 +64,28 @@
             
             <a href="{{ url_for('index') }}" class="cta-button">Get Started</a>
         </section>
+        <div id="overlay2" class="hidden" onclick="toggleInfoPopup()">
+            <div id="infoPopup" class="popup hidden">
+                <button class="close-btn" onclick="toggleInfoPopup()">×</button>
+                <h3>HoopCut Info</h3>
+                <div class="setting-item-2">
+                    <span><strong>Best Settings:</strong> Auto Hoop Detection</span>
+                </div>
+                <div class="setting-item-2">
+                    <span><strong>For more info:</strong> <a href="https://github.com/ericbh22/HoopCut_FH" target="_blank" style="color: #e97132;">GitHub</a></span>
+                </div>
+                <div class="setting-item-2">
+                    <span><strong>Coming Soon:</strong> Shot Type Analysis</span>
+                </div>
+                <div class="setting-item-2">
+                    <span><strong>Any Errors:</strong> Open an issue on GitHub</span>
+                </div>
+                <div class="setting-item-2">
+                    <span><strong>Maintained By:</strong> HoopCut Team</span>
+                </div>
+            </div>
+        </div>
+
         <div id="overlay" class="hidden" onclick="toggleSettingsPopup()"></div>
             <div id="settingsPopup" class="popup hidden">
                 <button class="close-btn" onclick="toggleSettingsPopup()">×</button>
@@ -79,7 +104,11 @@
                         <span class="slider"></span>
                     </label>
                 </div>
-                
+                <div class="setting-item-2">
+                    <button class="delete-btn delete-all-btn" onclick="deleteAll(event)" title="Delete Project">
+                      <i data-lucide="trash"></i> Delete All Projects
+                    </button>
+                </div>
             </div>
     </main>
     <script src="../static/js/home.js"></script>
